@@ -23,6 +23,13 @@ sub new
 	return $self;
 }
 
+sub obtain_lock
+{
+	my( $self ) = @_;
+
+	return $self->obtain_eprint_lock;
+}
+
 sub about_to_render 
 {
 	my( $self ) = @_;
@@ -34,6 +41,7 @@ sub allow_reindex
 {
 	my( $self ) = @_;
 
+	return 0 unless $self->could_obtain_eprint_lock;
 	return $self->allow( "eprint/staff/edit" );
 }
 sub action_reindex
